--- a/index.html
+++ b/index.html
@@ -138,6 +138,90 @@
             </div>
         </section>
 
+
+        <!-- About Section -->
+        <section class="py-5 bg-light" aria-labelledby="about-heading">
+            <div class="container">
+                <div class="card border-0 shadow-lg rounded-4 overflow-hidden">
+                    <div class="row g-0 align-items-center">
+                        <div class="col-lg-6 p-5">
+                            <header class="mb-4">
+                                <h2 id="about-heading" class="display-6 fw-bold mb-3">
+                                    Our Commitment to Sustainable Change
+                                </h2>
+                                <p class="text-muted">
+                                    Building resilient communities through evidence-based approaches and collaborative partnerships
+                                </p>
+                            </header>
+                            <p class="mb-3">
+                                BioNova is an international non-governmental organization dedicated to creating lasting, sustainable change in communities worldwide.
+                            </p>
+                            <p class="mb-3">
+                                Our mission focuses on empowering communities through capacity building, education, healthcare access, and economic development initiatives.
+                            </p>
+                            <p class="mb-4">
+                                We prioritize local leadership and participatory approaches to ensure programs are culturally appropriate and sustainable.
+                            </p>
+                            <a href="services.html" class="btn btn-dark">
+                                Explore Our Impact <i class="fas fa-arrow-right ms-2"></i>
+                            </a>
+                        </div>
+                        <div class="col-lg-6">
+                            <img
+                                src="content/images/teamBio.jpeg"
+                                alt="BioNova team collaborating"
+                                class="img-fluid w-100 h-100"
+                                style="object-fit: cover;"
+                                loading="lazy"
+                            />
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+        <!-- About Section -->
+        <section class="py-5 bg-light" aria-labelledby="about-heading">
+            <div class="container">
+                <div class="card border-0 shadow-lg rounded-4 overflow-hidden">
+                    <div class="row g-0 align-items-center">
+                        <div class="col-lg-6 p-5">
+                            <header class="mb-4">
+                                <h2 id="about-heading" class="display-6 fw-bold mb-3">
+                                    Our Commitment to Sustainable Change
+                                </h2>
+                                <p class="text-muted">
+                                    Building resilient communities through evidence-based approaches and collaborative partnerships
+                                </p>
+                            </header>
+                            <p class="mb-3">
+                                BioNova is an international non-governmental organization dedicated to creating lasting, sustainable change in communities worldwide.
+                            </p>
+                            <p class="mb-3">
+                                Our mission focuses on empowering communities through capacity building, education, healthcare access, and economic development initiatives.
+                            </p>
+                            <p class="mb-4">
+                                We prioritize local leadership and participatory approaches to ensure programs are culturally appropriate and sustainable.
+                            </p>
+                            <a href="services.html" class="btn btn-dark">
+                                Explore Our Impact <i class="fas fa-arrow-right ms-2"></i>
+                            </a>
+                        </div>
+                        <div class="col-lg-6">
+                            <img
+                                src="content/images/teamBio.jpeg"
+                                alt="BioNova team collaborating"
+                                class="img-fluid w-100 h-100"
+                                style="object-fit: cover;"
+                                loading="lazy"
+                            />
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!-- Articles Section -->
         <section class="section bg-light py-5" aria-labelledby="articles-heading">
             <div class="container">
