--- a/test.html
+++ b/test.html
@@ -21,6 +21,12 @@
       font-family: 'Inter', system-ui, -apple-system, sans-serif;
     }
     
+    /* Light teal greenish blue background */
+    body {
+      background: #e0f2f1; /* Light teal background */
+      min-height: 100vh;
+    }
+    
     /* Dark mode */
     .dark {
       background-color: #0f172a;
@@ -336,7 +342,7 @@
   </script>
 </head>
 
-<body class="bg-gradient-to-br from-cyan-50 via-blue-50 to-teal-50 min-h-screen">
+<body class="min-h-screen">
 
   <!-- Navigation -->
   <nav id="mainNav" class="fixed w-full top-0 z-50 glass transition-all duration-300">
