--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
             <p class="text-xl md:text-2xl mb-8 opacity-90 font-light">
               Experts, field officers, and changemakers from over 20 countries
             </p>
-            <a href="team.html" class="inline-flex items-center px-8 py-4 bg-white text-primary rounded-full font-bold text-lg hover:bg-opacity-90 hover:scale-105 transition-all duration-300 shadow-xl">
+            <a href="team.html" class="inline-flex items-center px-8 py-4 bg-white text-primary dark:text-white rounded-full font-bold text-lg hover:bg-opacity-90 hover:scale-105 transition-all duration-300 shadow-xl">
               <i class="fas fa-users mr-3"></i>
               View Full Team
             </a>
@@ -579,8 +579,8 @@
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 md:gap-12">
         <!-- Brand -->
         <div>
-          <h3 class="text-2xl font-bold text-white dark:text-white mb-4">BioNova</h3>
-          <p class="text-sm mb-6 leading-relaxed">
+          <h3 class="text-white font-bold mb-2">BioNova</h3>
+          <p class="text-white mb-2">
             Building sustainable futures through innovation, equity, and community-led action.
           </p>
           <div class="flex space-x-3">
@@ -603,11 +603,11 @@
         <div>
           <h4 class="font-bold text-white dark:text-white mb-4">Quick Links</h4>
           <ul class="space-y-2.5 text-sm">
-            <li><a href="services.html" class="hover:text-white transition-colors flex items-center"><i class="fas fa-chevron-right text-xs mr-2 text-accent"></i>About Us</a></li>
-            <li><a href="articles.html" class="hover:text-white transition-colors flex items-center"><i class="fas fa-chevron-right text-xs mr-2 text-accent"></i>Publications</a></li>
-            <li><a href="team.html" class="hover:text-white transition-colors flex items-center"><i class="fas fa-chevron-right text-xs mr-2 text-accent"></i>Our Team</a></li>
-            <li><a href="contact.html" class="hover:text-white transition-colors flex items-center"><i class="fas fa-chevron-right text-xs mr-2 text-accent"></i>Contact</a></li>
-            <li><a href="contact.html" class="hover:text-white transition-colors flex items-center"><i class="fas fa-chevron-right text-xs mr-2 text-accent"></i>Careers</a></li>
+            <li><a href="services.html" class="text-white mb-2"><i class="fas fa-chevron-right text-xs mr-2 text-accent"></i>About Us</a></li>
+            <li><a href="articles.html" class="text-white mb-2"><i class="fas fa-chevron-right text-xs mr-2 text-accent"></i>Publications</a></li>
+            <li><a href="team.html" class="text-white mb-2"><i class="fas fa-chevron-right text-xs mr-2 text-accent"></i>Our Team</a></li>
+            <li><a href="contact.html" class="text-white mb-2"><i class="fas fa-chevron-right text-xs mr-2 text-accent"></i>Contact</a></li>
+            <li><a href="contact.html" class="text-white mb-2"><i class="fas fa-chevron-right text-xs mr-2 text-accent"></i>Careers</a></li>
           </ul>
         </div>
 
@@ -617,15 +617,15 @@
           <ul class="space-y-3 text-sm">
             <li class="flex items-start">
               <i class="fas fa-map-marker-alt mt-1 mr-3 text-accent"></i>
-              <span>Dhaka, Bangladesh</span>
+              <span class="text-white mb-2">Dhaka, Bangladesh</span>
             </li>
             <li class="flex items-start">
               <i class="fas fa-envelope mt-1 mr-3 text-accent"></i>
-              <span>info@bionova.org</span>
+              <span class="text-white mb-2">info@bionova.org</span>
             </li>
             <li class="flex items-start">
               <i class="fas fa-phone mt-1 mr-3 text-accent"></i>
-              <span>+880 17XX-XXXXXX</span>
+              <span class="text-white mb-2">+880 17XX-XXXXXX</span>
             </li>
           </ul>
         </div>
@@ -634,10 +634,10 @@
         <div>
           <h4 class="text-white font-semibold text-lg mb-4">Resources</h4>
           <ul class="space-y-2.5 text-sm">
-            <li><a href="#" class="hover:text-white transition-colors flex items-center"><i class="fas fa-chevron-right text-xs mr-2 text-accent"></i>Annual Reports</a></li>
-            <li><a href="#" class="hover:text-white transition-colors flex items-center"><i class="fas fa-chevron-right text-xs mr-2 text-accent"></i>Research Papers</a></li>
-            <li><a href="#" class="hover:text-white transition-colors flex items-center"><i class="fas fa-chevron-right text-xs mr-2 text-accent"></i>Case Studies</a></li>
-            <li><a href="#" class="hover:text-white transition-colors flex items-center"><i class="fas fa-chevron-right text-xs mr-2 text-accent"></i>Partnerships</a></li>
+            <li><a href="#" class="text-white mb-2"><i class="fas fa-chevron-right text-xs mr-2 text-accent"></i>Annual Reports</a></li>
+            <li><a href="#" class="text-white mb-2"><i class="fas fa-chevron-right text-xs mr-2 text-accent"></i>Research Papers</a></li>
+            <li><a href="#" class="text-white mb-2"><i class="fas fa-chevron-right text-xs mr-2 text-accent"></i>Case Studies</a></li>
+            <li><a href="#" class="text-white mb-2"><i class="fas fa-chevron-right text-xs mr-2 text-accent"></i>Partnerships</a></li>
           </ul>
         </div>
       </div>
