--- a/articles.html
+++ b/articles.html
@@ -782,7 +782,7 @@
                 const author = article.meta.author || 'BioNova Team';
 
                 return `
-                    <div class="article-card opacity-0">
+                    <div class="article-card opacity-0 glass">
                         <div class="solid-card rounded-2xl overflow-hidden shadow-lg h-full flex flex-col">
                             <div class="card-image-wrapper h-48 overflow-hidden">
                                 <img src="${imageUrl}" class="w-full h-full object-cover" alt="${article.meta.title}" loading="lazy"
