--- a/articles.html
+++ b/articles.html
@@ -782,8 +782,8 @@
                 const author = article.meta.author || 'BioNova Team';
 
                 return `
-                    <div class="article-card opacity-0 glass">
-                        <div class="solid-card rounded-2xl overflow-hidden shadow-lg h-full flex flex-col">
+                    <div class="article-card opacity-0">
+                        <div class="rounded-2xl overflow-hidden h-full flex flex-col bg-white/20 backdrop-blur-xl border border-white/30 shadow-xl">
                             <div class="card-image-wrapper h-48 overflow-hidden">
                                 <img src="${imageUrl}" class="w-full h-full object-cover" alt="${article.meta.title}" loading="lazy"
                                      onerror="this.onerror=null;this.src='https://via.placeholder.com/800x500/f1f5f9/94a3b8?text=Image+Unavailable'">
