--- a/articles.html
+++ b/articles.html
@@ -791,11 +791,11 @@
                             <div class="p-6 flex flex-col flex-grow">
                                 <h3 class="text-xl font-bold mb-2 text-gray-900 dark:text-white line-clamp-2">${article.meta.title}</h3>
                                 <div class="text-sm text-gray-500 dark:text-gray-400 mb-3 flex items-center">
-                                    ${date ? `<i class="far fa-calendar-alt mr-2 text-accent"></i> ${date}` : ''}
+                                    ${date ? `<i class="far fa-calendar-alt mr-2 text-dark-600 dark:text-gray-300 mb-4 flex-grow leading-relaxed"></i> ${date}` : ''}
                                     ${date && author ? '<span class="mx-2">•</span>' : ''}
                                     ${author ? `<i class="far fa-user mr-2 text-accent"></i> ${author}` : ''}
                                 </div>
-                                <p class="text-gray-600 dark:text-gray-300 mb-4 flex-grow leading-relaxed">${article.excerpt}</p>
+                                <p class="text-dark-600 dark:text-gray-300 mb-4 flex-grow leading-relaxed">${article.excerpt}</p>
                                 <div class="mb-4 flex flex-wrap">${tagsHtml}</div>
                                 <a href="article.html" 
                                    onclick="openDetail('${article.id}');return false;"
