--- a/articles.html
+++ b/articles.html
@@ -791,8 +791,8 @@
                             <div class="p-6 flex flex-col flex-grow">
                                 <h3 class="text-xl font-bold mb-2 text-gray-900 dark:text-white line-clamp-2">${article.meta.title}</h3>
                                 <div class="text-sm text-gray-500 dark:text-gray-400 mb-3 flex items-center">
-                                    ${date ? `<i class="far fa-calendar-alt mr-2 text-dark-600 dark:text-gray-300 mb-4 flex-grow leading-relaxed"></i> ${date}` : ''}
-                                    ${date && author ? '<span class="mx-2">•</span>' : ''}
+                                    ${date ? `<i class="far fa-calendar-alt mr-2 text-dark"></i> ${date}` : ''}
+                                    ${date && author ? '<span class="mx-2 text-dark">•</span>' : ''}
                                     ${author ? `<i class="far fa-user mr-2 text-accent"></i> ${author}` : ''}
                                 </div>
                                 <p class="text-dark-600 dark:text-gray-300 mb-4 flex-grow leading-relaxed">${article.excerpt}</p>
