--- a/articles.html
+++ b/articles.html
@@ -790,7 +790,7 @@
                             </div>
                             <div class="p-6 flex flex-col flex-grow">
                                 <h3 class="text-xl font-bold mb-2 text-gray-900 dark:text-white line-clamp-2">${article.meta.title}</h3>
-                                <div class="text-dark">
+                                <div class="text-dark font-bold">
                                     ${date ? `<i class="class="far fa-calendar-alt mr-1"></i> ${date}` : ''}
                                     ${date && author ? '<span>•</span>' : ''}
                                     ${author ? `<i class="far fa-user mr-1"></i> ${author}` : ''}
