--- a/test.html
+++ b/test.html
@@ -489,7 +489,7 @@
             const excerpt = cleanExcerpt(parts.slice(2).join('---'), 22);
             return `
               <div class="article-card opacity-0">
-                <div class="glass-card rounded-2xl overflow-hidden shadow-lg h-full flex flex-col">
+                <div class="glass-card rounded-2xl overflow-hidden shadow-lg h-full flex flex-col bg-white/10 backdrop-blur-lg border border-white/20">
                   <div class="card-image-wrapper h-48 md:h-56 overflow-hidden">
                     <img src="${meta.image || 'https://via.placeholder.com/800x500/1e293b/94a8c1?text=Article'}"
                          class="w-full h-full object-cover" alt="${meta.title}" loading="lazy"
