--- a/team.html
+++ b/team.html
@@ -308,7 +308,7 @@
                 <!-- Logo and Brand -->
                 <div class="nav-brand">
                     <img src="content/images/IMG_5811.png" alt="BioNova Logo" class="nav-logo">
-                    <a href="index.html" class="text-2xl md:text-3xl font-bold gradient-text">BioNova</a>
+                    <a href="index.html" class="text-2xl md:text-3xl font-bold gradient-text">YCI</a>
                 </div>
                 
                 <div class="flex items-center space-x-4">
@@ -323,9 +323,9 @@
                 <!-- Desktop menu -->
                 <div class="hidden md:flex items-center space-x-8">
                     <a href="index.html" class="nav-link font-medium">Home</a>
-                    <a href="articles.html" class="nav-link font-medium">Publications</a>
+                    <a href="articles.html" class="nav-link font-medium">Events</a>
                     <a href="team.html" class="nav-link font-medium">Team</a>
-                    <a href="services.html" class="nav-link font-medium">About</a>
+                    <a href="services.html" class="nav-link font-medium">blogs</a>
                     <a href="contact.html" class="px-6 py-2.5 nav-contact-btn text-white rounded-full font-medium hover:shadow-lg hover:scale-105 transition-all duration-300">Contact</a>
                 </div>
             </div>
@@ -334,9 +334,9 @@
             <div id="mobileMenu" class="hidden md:hidden pb-4 pt-2 glass rounded-lg mt-2">
                 <div class="flex flex-col space-y-3 px-4 py-2">
                     <a href="index.html" class="nav-link font-medium py-2">Home</a>
-                    <a href="articles.html" class="nav-link font-medium py-2">Publications</a>
+                    <a href="articles.html" class="nav-link font-medium py-2">Events</a>
                     <a href="team.html" class="nav-link font-medium py-2">Team</a>
-                    <a href="services.html" class="nav-link font-medium py-2">About</a>
+                    <a href="services.html" class="nav-link font-medium py-2">blogs</a>
                     <a href="contact.html" class="px-6 py-2.5 nav-contact-btn text-white rounded-full font-medium text-center">Contact</a>
                 </div>
             </div>
