--- a/test.html
+++ b/test.html
@@ -404,7 +404,7 @@
     <section class="py-16 page-load delay-3">
       <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="pure-glass rounded-3xl overflow-hidden group">
-          <img src="content/images/teamBio.jpeg" alt="About Us" class="w-full h-64 sm:h-96 object-cover transition-transform duration-700 group-hover:scale-105">
+          <img src="content/images/Screenshot 2025-12-16 222947.png" alt="About Us" class="w-full h-64 sm:h-96 object-cover transition-transform duration-700 group-hover:scale-105">
           <div class="p-6 md:p-8">
             <h2 class="text-3xl md:text-4xl font-bold mb-4">Our Commitment to bring Change</h2>
             <p class="text-white mb-4">placeholder</p>
