--- a/index.html
+++ b/index.html
@@ -345,9 +345,9 @@
       <div class="absolute bottom-1/4 left-1/4 w-8 h-8 bg-secondary rounded-full opacity-10 floating-element" style="animation-delay: -4s;"></div>
       
       <div class="relative z-10 max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 text-center text-white">
-        <h1 class="text-4xl sm:text-5xl md:text-6xl font-bold mb-6 page-load">
+        <h2 class="text-4xl sm:text-5xl md:text-6xl font-bold mb-6 page-load">
           TO BUILD A CLIMATE RESILIENT BANGLADESH WHERE YOUTH LEADS TOWARD
-        </h1>
+        </h2>
         <div class="flex flex-col sm:flex-row gap-4 justify-center">
           <a href="contact.html" class="px-8 py-4 bg-gradient-to-r from-primary to-secondary text-white rounded-full font-semibold hover:scale-105 transition glow-button page-load delay-2">
             Join Our Mission
@@ -657,7 +657,7 @@
           cards.push(`
             <div class="article-card pure-glass rounded-xl overflow-hidden group">
               <div class="article-image-container">
-                <img src="${meta.image || 'https://images.unsplash.com/photo-1556761175-b413da4baf72?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80'}"
+                <img src="${meta.image || "image"}"
                      alt="${meta.title || 'Article'}"
                      class="article-image"
                      onerror="this.src='https://images.unsplash.com/photo-1556761175-b413da4baf72?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80'"
