--- a/services.html
+++ b/services.html
@@ -31,11 +31,11 @@
   <nav id="mainNav" class="fixed w-full top-0 z-50 bg-white/90 backdrop-blur-sm border-b border-gray-200">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
       <div class="flex justify-between items-center h-16 md:h-20">
-        <a href="index.html" class="text-2xl md:text-3xl font-bold text-blue-800">BioNova</a>
+        <a href="index.html" class="text-2xl md:text-3xl font-bold text-blue-800">YCI</a>
         <div class="hidden md:flex items-center space-x-8">
           <a href="index.html" class="text-gray-700 hover:text-blue-700 font-medium">Home</a>
-          <a href="articles.html" class="text-gray-700 hover:text-blue-700 font-medium">Publications</a>
-          <a href="services.html" class="text-gray-700 hover:text-blue-700 font-medium">Announcements</a>
+          <a href="articles.html" class="text-gray-700 hover:text-blue-700 font-medium">Events</a>
+          <a href="services.html" class="text-gray-700 hover:text-blue-700 font-medium">Blogs</a>
           <a href="team.html" class="text-gray-700 hover:text-blue-700 font-medium">Team</a>
           <a href="contact.html" class="px-6 py-2.5 bg-gradient-to-r from-blue-800 to-teal-600 text-white rounded-full font-medium hover:shadow-lg hover:scale-105 transition-all">Contact</a>
         </div>
@@ -47,8 +47,8 @@
       </div>
       <div id="mobileMenu" class="hidden md:hidden pb-4 pt-2 flex flex-col space-y-3">
         <a href="index.html" class="text-gray-700 hover:text-blue-700 font-medium py-2">Home</a>
-        <a href="articles.html" class="text-gray-700 hover:text-blue-700 font-medium py-2">Publications</a>
-        <a href="services.html" class="text-gray-700 hover:text-blue-700 font-medium py-2">Announcements</a>
+        <a href="articles.html" class="text-gray-700 hover:text-blue-700 font-medium py-2">Events</a>
+        <a href="services.html" class="text-gray-700 hover:text-blue-700 font-medium py-2">Blogs</a>
         <a href="team.html" class="text-gray-700 hover:text-blue-700 font-medium py-2">Team</a>
         <a href="contact.html" class="px-6 py-2.5 bg-gradient-to-r from-blue-800 to-teal-600 text-white rounded-full font-medium text-center">Contact</a>
       </div>
@@ -63,7 +63,7 @@
         <div class="text-center mb-12">
           <h1 class="text-4xl md:text-5xl font-bold text-gray-900 mb-4">Announcements</h1>
           <p class="text-lg md:text-xl text-gray-600 max-w-2xl mx-auto">
-            YCI Bangladesh blah blah blah
+            blog
           </p>
         </div>
 
